assets/stylesheets/responsive/custom.scss
/* ... */
#banner {

  /* locale border */
  @include respond-min( $main_menu-mobile_menu_cutoff ){
    border-top: 4px solid $locale-bg;
  }

  /* Hide the greeting on smaller devices */
  .greeting {
    display: none;
  }

  .rsp_menu_button{
    position: absolute;
    top: 0;
    /* 15px for margin minus 9 for background offset*/
    right: 4px;
    @extend .image-replacement;
    background-image: image-url('hamburger.png');
    background-repeat: no-repeat;
    background-position: center 10px;
    background-size: 28px 26px;
    width: 44px;
    height: 38px;
    padding: 0;
    /* Make sure clickable area covers image */
    a {
      width: 100%;
      height: 100%;
    }
  }

  /* Pad evenly top and bottom on smaller devices */
  #logo_wrapper{
    #logo {
      display: block;
    }

    // Mobile logo
    @media(max-width: $main_menu-mobile_menu_cutoff) {
      padding: 0.5em 0 0.5em 0.9375em;

      #logo {
        background-image: image-url('logo-mobile.png');
        background-repeat: no-repeat;
        background-position: left center;
        background-size: 200px 27px;
        height: 30px;
        @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
          background-image: image-url('logo-mobile@2.png');
          background-size: 200px 27px;
        }
      }

      img {
        display: none;
        height: 30px;
      }
    }

    // Desktop logo
    @include respond-min($main_menu-mobile_menu_cutoff) {
      margin-bottom: 0;
    }
}

}

/* Footer */
#footer {
  background-color: $footer-bg;
  color: $footer-color;
  font-family: $sans-serif-font-family;
  font-size: 1em;
  padding: 2em 4em;
  a {
    text-decoration: none;
    color: $footer-link-color;
  }
  h1,h2,h3,h4,h5,h6 {
    color: lighten($heading-color, 15%);
  }
  h1:first-child,
  h2:first-child,
  h3:first-child,
  h4:first-child,
  h5:first-child,
  h6:first-child {
    margin-top: 0;
  }
  ul li {
    text-align: center;
  }
}

/* Request page */
div.correspondence {
  background-color: $correspondence-bg;
  padding-bottom: 0.5em;
  .event_actions {
    margin-bottom: 0;
  }
}

.incoming.correspondence {
  border: none;
  border-top: 8px solid $incoming-correspondence-color;
  box-shadow: 0 3px 3px $correspondence-shadow;
  font-family: "Courier New", Courier, monospace;
  font-size: 0.9rem;
  @include ie8 {
    font-size: 0.9em;
  }
  a.link_to_this {
    background-color: $incoming-correspondence-color;
  }
}

.outgoing.correspondence {
  border: none;
  border-top: 8px solid $outgoing-correspondence-color;
  box-shadow: 0 3px 3px $correspondence-shadow;
  a.link_to_this {
    background-color: $outgoing-correspondence-color;
  }
}

.describe_state_form input[type="radio"] + label {
  display:inline;
}

a.link_to_this {
  background-image: image-url('link-icon.png');
  @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
     background-image:image-url('link-icon@2.png');
  }
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 70% 70%;
  border-radius: 50%;
  height: 20px;
  width: 20px;
}

#link_box {
  font-family: $font-family;
  border-radius: 0;
  border: 1px solid $heading-color;
  .close-button {
    background-color: $correspondence-bg;
    float: right;
  }
}

.describe_state_form {
  padding: 0;

  form{
    background-color: $action-bg;
    border-color: $action-border;
    h2 {
      margin-top: 0;
    }
    hr {
      border-color: $action-border;
    }
  }
}

/* Status lines and icons */
.icon_waiting_classification,
.icon_waiting_response,
.icon_waiting_clarification,
.icon_requires_admin,
.icon_waiting_response_overdue,
.icon_gone_postal,
.icon_error_message,
.icon_internal_review,
.icon_user_withdrawn {
  color: $status-pending;
}

.icon_attention_requested,
.icon_not_held,
.icon_waiting_response_very_overdue,
.icon_failed,
.icon_rejected {
  color: $status-failure;
}

.icon_successful,
.icon_partially_successful {
  color: $status-success;
}

/* Attachments*/

.view_html_prefix {
  font-family: $font-family;
  background-color: $banner-bg;
  color: transparentize($main_menu-link_text, 0.2);
  @include ie8 {
    color: $main_menu-link_text;
  }
  a {
    color: $main_menu-link_text;
  }
  .view_html_logo, .view_html_description {
    padding-top: 1em;
  }
}

/* User page */
#user_photo_on_profile {
  img, #set_photo {
    margin-top:0.5em;
  }
}

/* Help pages */

dt {
  color: $heading-color;
  font-weight: 700;
  @include respond-min( $main_menu-mobile_menu_cutoff ){
    font-size: 2em;
    line-height: 1.1em;
  }
}

/* Front page */
/* Drop the extract indentation on small screens */
#frontpage_examples .excerpt {
    padding: 0.2em 0 0 0;
    @include respond-min( $main_menu-mobile_menu_cutoff ){
      padding: 0 0 0 2em;
    }
}

/* Request list page */
#request_list {
  #filter_requests_form {
    label.form_label.title {
      width: auto;
    }
  }
}

